$Id: History,v 1.17 2000-05-12 14:08:14 kurasige Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
May 12 2000 H.Kurashige (track-V01-01-00)
-  SetTouchable methods has been changed to get "const" pointer

Feb. 16, 2000 H.Kurashige
-  Added cashing mechanism of pointer to material in G4StepPoint
-  Added theMaterialChange in G4ParticleChangeForTransportation
-  GetTouchable methods has been changed to give "const" pointer 

Feb 13, 2000 H.Kurashige (track-V01-00-01)
-  Added G4ParticleChangeForRadDecay
-  Changed G4VParticleChange::AddSecondary to set secondary track weight equal to the primary's one
-  Removed printing pointers of ParticleChange object in CheckIt methods 

Jan 18, 2000 H.Kurashige (track-V01-00-00)
-  Fixed bugs in treatment of secondary track weight 

Nov 7, 1999 H.Kurashige (track-V00-01-01)
-  Added comments for "Software Reference Manual" 

Oct 5, 1999 H,Kurashige (track-V00-01-00)
-  Added mass/charge change in G4ParticleChange
-  Modified G4ParticleChange::CheckIt
-  Separate implementation of inline functions to G4Track.icc and G4Step.icc

July 14 1999 H.Kurashige (track-01-00-07)
-  Fixed bugs in G4Mars5GeVMechanism::CreatePion()

May 6, 1999 H.Kurashige (track-01-00-06)