@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4ParticleChangeForTransport.icc,v 1.4 2000-05-12 13:15:43 kurasige Exp $
+// $Id: G4ParticleChangeForTransport.icc,v 1.5 2000-05-16 00:34:27 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -60,10 +60,10 @@ inline void G4ParticleChangeForTransport::Initialize(const G4Track& track)
 //  InitializeSecondaries(track);
 
   // set Energy/Momentum etc. equal to those of the parent particle
-//  const G4DynamicParticle*  pParticle = track.GetDynamicParticle();
+  const G4DynamicParticle*  pParticle = track.GetDynamicParticle();
 //  theEnergyChange          = pParticle->GetKineticEnergy();
 //  theMomentumChange        = pParticle->GetMomentumDirection();
-//  thePolarizationChange    = pParticle->GetPolarization();
+    thePolarizationChange    = pParticle->GetPolarization();
 //  theProperTimeChange      = pParticle->GetProperTime();
 
   // set Position/Time etc. equal to those of the parent track
