@@ -1,4 +1,4 @@
-$Id: History,v 1.17 2000-05-12 14:08:14 kurasige Exp $
+$Id: History,v 1.18 2000-05-16 00:34:19 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+May 16 2000 H.Kurashige (track-V01-01-01)
+-  Added thePolarizationChange in G4ParticleChangeForTransportation
+
 May 12 2000 H.Kurashige (track-V01-01-00)
 -  SetTouchable methods has been changed to get "const" pointer
 
